--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <link href='https://unpkg.com/maplibre-gl@4.0.0/dist/maplibre-gl.css' rel='stylesheet' />
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' />
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="./public/manifest.json">
   <title>NavegaTec</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
